--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
+  "name": "Joy Bidet",
   "version": "1.0",
-  "action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
-  }
+  "description": "Replace 'Joe Biden' with 'Joy Bidet'",
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://www.nytimes.com/*"
+      ]
+    }
+  ]
 }
